<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Oliv</string>

    <string name="title_start" translatable="false">Oliv</string>
    <string name="subtitle_start">Chatea seguro y sin riesgo</string>
    <string name="title_home">Inicio</string>
    <string name="title_login">Iniciar sesión</string>
    <string name="title_register">Registrarse</string>
    <string name="title_contacts">Contactos</string>
    <string name="title_search">Buscar</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="title_friends">Amigos</string>
    <string name="title_requests">Solicitudes</string>
    <string name="title_chats">Chats</string>
    <string name="alrd_reg">Ya registrado? Pulse aquí</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="erase_data">Borrar cuenta</string>
    <string name="search">Buscar…</string>
    <string name="seen">visto</string>
    <string name="forgotpage">Reiniciar Contraseña</string>
    <string name="reset">Reiniciar</string>

    <string name="title_chat">Chat</string>
    <string name="title_users">Usuarios</string>
    <string name="title_profile">Perfil</string>
    <string name="title_settings">Ajustes</string>
    <string name="go_on">Entrar</string>
    <string name="go_back">Volver</string>
    <string name="go_register">Registrarse</string>
    <string name="slider_text">Desliza  para entrar</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="hint_email" translatable="false">example@gmail.com</string>
    <string name="password">Contraseña</string>
    <string name="hint_password2">Repetir contraseña</string>
    <string name="UserName">Nombre de usuario</string>
    <string name="hint_username">nombre.123</string>
    <string name="forgotPsw">¿Olvidó su constraseña? Pulse aquí</string>

    <string name="emptyFields">No deje campos sin rellenar</string>
    <string name="wrongPassword">Contraseñas no iguales</string>
    <string name="wrongLogin">Inicio de Sesión incorrecto</string>
    <string name="wrongRegister">Registro incorrecto</string>
    <string name="goodReg">Registro Completado</string>
    <string name="goodLogin">Inicio de Sesión correcto</string>

</resources>