<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/colunm_background_cropped" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/title_register"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailLabelReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailTextReg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/text_input_bg"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/grey_hint" />

            <TextView
                android:id="@+id/usernameLabelReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/UserName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/usernameReg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/text_input_bg"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/grey_hint" />

            <TextView
                android:id="@+id/passwordLabelReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingTop="25dp"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordText1Reg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/text_input_bg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/grey_hint" />

            <EditText
                android:id="@+id/passwordText2Reg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/text_input_bg"
                android:ems="10"
                android:hint="@string/hint_password2"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/grey_hint" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_style"
                android:text="@string/go_register"
                android:textColor="@color/meat" />

            <TextView
                android:id="@+id/alrd_reg_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/alrd_reg"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

