<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".LogInActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:padding="25dp"
                android:text="@string/title_login"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailLabelLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="25dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailTextLog"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/text_input_bg"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/grey_hint" />

            <TextView
                android:id="@+id/passwordLabelLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="25dp"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordTextLog"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="password"
                android:background="@drawable/text_input_bg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColorHint="@color/grey_hint" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/newUserBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_bg"
            android:padding="5dp"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textColor="@color/grey_hint"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_style"
            android:text="@string/go_on"
            android:textColor="@color/meat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/forgotPWDtext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/forgotPsw"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/column_crop_bg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>