<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_olive"
    tools:context=".ResetPwdActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/resetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="50dp"
                android:padding="25dp"
                android:text="@string/forgotpage"
                android:textAlignment="center"
                android:textColor="@color/angel3_green"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailLabelReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingStart="10dp"
                android:paddingTop="25dp"
                android:paddingEnd="10dp"
                android:text="@string/email"
                android:textColor="@color/cambridge_blue"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailTextReset"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/text_input_bg"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/angel3_green"
                android:textColorHint="@color/grey_hint"
                tools:textColorHint="@color/angel3_green" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/resetButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/bc_main_toolbar"
                    android:text="@string/reset"
                    android:textColor="@color/black_olive"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>